# simple-mip-site

./: .gitignore  Cargo.toml  README.md
public/: about.html  index.css  index.html  index.js
src/: main.rs
