[package]
name = "simple-mip"
version = "0.1.0"
authors = ["Jens Nilsson <jens.erik.nilsson@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3"
actix-files = "0.5.0"
env_logger = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_with = { version = "1.6.0", features = ["json"]}
simple-mip-optimizer = { path = "../simple-mip-optimizer" }

